fixed z-index of order-form

--- a/styles/constants/_z-index.scss
+++ b/styles/constants/_z-index.scss
@@ -6,6 +6,7 @@ $product-tab-level: 30;
 $overlay-level: 100;
 $sidebar-level: 200;
 $search-modal-level: 300;
-$order-form-modal-level: 400;
-$shopping-basket-modal-level: 400;
-$bookmark-toaset-level: 600;
+
+$bookmark-toaset-level: 60;
+$order-form-modal-level: 40;
+$shopping-basket-modal-level: 40;
